tests/ui/parser/issues/issue-17904.stderr
error: where clauses are not allowed before tuple struct bodies
  --> $DIR/issue-17904.rs:6:15
   |
LL | struct Foo<T> where T: Copy, (T);
   |        ---    ^^^^^^^^^^^^^^ --- the struct body
   |        |      |
   |        |      unexpected where clause
   |        while parsing this tuple struct
   |
help: move the body before the where clause
   |
LL - struct Foo<T> where T: Copy, (T);
LL + struct Foo<T>(T) where T: Copy;
   |

error: aborting due to 1 previous error

